DA REST server URL for unit test changed to localhost:12345, so the test does not fill logs of any common server.